--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,37 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: 'Montserrat',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #333333;
+  background-color: #F2F2F2;
+  font-size: 30px;
+  min-width: 300px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h1 {
+  font-family: 'Montserrat',
+    sans-serif;
+  font-weight: 900;
+  font-style: italic;
+  font-size: 120px;
+  line-height: 80%;
+  margin: 0;
+}
+
+@media only screen and (max-width: 650px) {
+  body {
+    font-size: 17px;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+
+}
+
+p {
+  margin: 0;
 }
